fix logic for images coming off screen

--- a/website/static/css/images.css
+++ b/website/static/css/images.css
@@ -128,7 +128,7 @@ div.slider::-webkit-scrollbar {
 }
 
 .slider-wrap{
-    width:100%;
+    width:100vw;
     height: 50%;
     position: fixed;
     overflow-x: visible;
